# homework_django

./: .gitignore  README.md  catalog.json  pyproject.toml  requirements.txt  tasks.py
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_slug.py
blog/templates/blog/: blog_detail.html  blog_form.html
blog/templates/blog/includes/: inc_blog_card.html
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/managment/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_contact_alter_category_options_alter_product_options_and_more.py  0003_blog_alter_product_changed_date_and_more.py  0004_version.py  0005_product_user.py  0006_alter_version_num_of_version.py
catalog/migrations/catalog/migrations/: 0007_alter_product_options_product_is_published.py
catalog/services/: cache.py
catalog/templates/catalog/: base.html  blog_form.html  contact_form.html  product_detail.html  product_form.html  product_form_with_formset.html  product_list.html
catalog/templates/catalog/includes/: inc_catalog_menu.html  inc_product_card.html
catalog/templates/catalog/includes/catalog/templates/catalog/includes/: inc_catalog_menu.html
config/: settings.py  urls.py
mailing/: forms.py  tasks.py  views.py
mailing/migrations/: 0001_initial.py  0002_initial.py
main/: views.py
users/: forms.py  models.py  services.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_email_verify.py  0003_alter_user_phone.html
users/templates/users/: login.html  password_reset_confirm.html
