[tool.poetry]
name = "homework-django"
version = "0.1.0"
description = ""
authors = ["AnnaPenkinaPython <annapenkina200121@mail.ru>"]
readme = "README.md"
packages = [{include = "homework_django"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

